--- a/sgnup.css
+++ b/sgnup.css
@@ -213,29 +213,29 @@ a:hover
 /*MEDIA QUERY*/
 
 @media (max-width: 992px) {
-  .login100-form {
+  .login-form {
     width: 50%;
     padding-left: 30px;
     padding-right: 30px;
   }
 
-  .login100-more {
+  .login-more {
     width: 50%;
   }
 }
 
 @media (max-width: 768px) {
-  .login100-form {
+  .login-form {
     width: 100%;
   }
 
-  .login100-more {
+  .login-more {
     display: none;
   }
 }
 
 @media (max-width: 576px) {
-  .login100-form {
+  .login-form {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 70px;
