--- a/re.css
+++ b/re.css
@@ -106,3 +106,11 @@ input[type=button]:hover
  from {top: 30px; opacity: 1;}
  to {top: 0; opacity: 0;}
 }
+
+@media (max-width: 576px) {
+    body{
+        background: url('Images/bg-02.jpg');
+        background-size: cover;
+  }
+  
+}
