--- a/cong.css
+++ b/cong.css
@@ -14,7 +14,6 @@ a
 {
     background: rgba(44,62,80,0.7);
     padding: 40px;
-    
     height: 200px;
     margin-left: 180px;
     margin: 0 auto;
@@ -25,4 +24,12 @@ h2
 {
     margin-top: 30px;
     margin-left: 10px;
+}
+
+@media (max-width: 576px) {
+    body{
+        background: url('Images/bg-02.jpg');
+        background-size: cover;
+  }
+  
 }
