--- a/sgnup.css
+++ b/sgnup.css
@@ -216,7 +216,7 @@ a:hover
 }
 /*MEDIA QUERY*/
 
-@media (max-width: 1200px) {
+@media only screen and (max-width: 1000px) {
   .login-form {
     width: 50%;
     padding-left: 30px;
@@ -228,7 +228,7 @@ a:hover
   }
 }
 
-@media (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
   .login-form {
     width: 100%;
   }
@@ -238,16 +238,15 @@ a:hover
   }
 }
 
-@media (max-width: 576px) {
+@media only screen and (max-width: 576px) {
   .login-form {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 70px;
   }
 }
-/*==================================================================
-[ Social ]*/
-/* .login100-form-social-item {
+/*Social*/
+/* .login-form-social-item {
   width: 36px;
   height: 36px;
   font-size: 18px;
@@ -255,7 +254,7 @@ a:hover
   border-radius: 50%;
 }
 
-.login100-form-social-item:hover {
+.login-form-social-item:hover {
   background: #333333;
   color: #fff;
 } */
