--- a/sgnup.css
+++ b/sgnup.css
@@ -216,8 +216,8 @@ a:hover
 }
 /*MEDIA QUERY*/
 
-@media only screen and (max-width: 1000px) {
-  .login-form {
+@media (max-width: 1100px) {
+  .form {
     width: 50%;
     padding-left: 30px;
     padding-right: 30px;
@@ -228,8 +228,8 @@ a:hover
   }
 }
 
-@media only screen and (max-width: 800px) {
-  .login-form {
+@media (max-width: 780px) {
+  .form {
     width: 100%;
   }
 
@@ -238,15 +238,15 @@ a:hover
   }
 }
 
-@media only screen and (max-width: 576px) {
-  .login-form {
+@media (max-width: 576px) {
+  .form {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 70px;
   }
 }
 /*Social*/
-/* .login-form-social-item {
+/* .login100-form-social-item {
   width: 36px;
   height: 36px;
   font-size: 18px;
@@ -254,7 +254,7 @@ a:hover
   border-radius: 50%;
 }
 
-.login-form-social-item:hover {
+.login100-form-social-item:hover {
   background: #333333;
   color: #fff;
 } */
