--- a/sgnup.css
+++ b/sgnup.css
@@ -215,9 +215,8 @@ a:hover
     width: 100%;
 }
 /*MEDIA QUERY*/
-
-@media (max-width: 1100px) {
-  .form {
+@media (max-width: 992px) {
+  .login-form {
     width: 50%;
     padding-left: 30px;
     padding-right: 30px;
@@ -226,24 +225,26 @@ a:hover
   .login-more {
     width: 50%;
   }
+  
 }
-
-@media (max-width: 780px) {
-  .form {
+@media (max-width: 750px) {
+  .login-form {
     width: 100%;
   }
 
   .login-more {
     display: none;
   }
+  
 }
 
 @media (max-width: 576px) {
-  .form {
+  .login-form {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 70px;
   }
+ 
 }
 /*Social*/
 /* .login100-form-social-item {
