--- a/sgnup.css
+++ b/sgnup.css
@@ -1,56 +1,34 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+	margin: 0px; 
+	padding: 0px; 
+	box-sizing: border-box;
 }
 
-body,
-html {
-  height: 100%;
-  font-family: Poppins-Regular, sans-serif;
+body, html {
+	height: 100%;
+	font-family: "Play", sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0px;
+
+h1,h2,h3,h4,h5,h6 {
+	margin: 0px;
 }
 
 p {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666666;
-  margin: 0px;
+	font-family: Poppins-Regular;
+	font-size: 14px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
 }
 
-/*LOGIN*/
 .limiter {
   width: 100%;
   margin: 0 auto;
 }
 
 .container-login {
-  width: 100%;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background: #f2f2f2;
-}
-
-.wrap-login {
-  width: 100%;
-  background: #fff;
-  overflow: hidden;
+  width: 100%;  
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -58,21 +36,30 @@ p {
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
-  flex-direction: row-reverse;
+  flex-wrap: wrap;
 }
 
-/*BACKGROUND*/
+
+.wrap-login {
+  width: 520px;
+  min-height: 100vh;
+  background: #fff;
+  position: relative;
+}
+
+/*Background*/
 
 .login-more {
-  width: calc(100% - 560px);
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
+  width: calc(100% - 520px);
   position: relative;
   z-index: 1;
+
 }
 
-.login-more::before {
+.login100-more::before {
   content: "";
   display: block;
   position: absolute;
@@ -81,18 +68,23 @@ p {
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.1);
 }
 
-/*FORM*/
+/*Form */
+
 .login-form {
-  width: 560px;
-  min-height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
   display: block;
-  background-color: #f7f7f7;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 55px 55px 55px 55px;
+  background-color: #f7f7f7; 
+  min-height: 100vh;
 }
-
 
 .login-form-title {
   width: 100%;
@@ -110,7 +102,6 @@ p {
     height: 120px;
     margin: auto;
     border-radius: 100%;
-    margin-bottom: 20px;
 }
 
 h1{
@@ -174,7 +165,7 @@ input[type="button"]:hover {
 }
 h2 {
   color: #0b466b;
-  padding-top: 50px;
+  padding-top: 45px;
   padding-bottom: 15px;
   font-size: 2rem;
 }
@@ -191,7 +182,8 @@ h2 {
   color: #fff;
   text-align: center;
   border-radius: 1em;
-  padding: 10px;
+  padding: 8px;
+  font-size: 14px;
    position: static;
 }
 
@@ -215,12 +207,10 @@ a:hover
     flex-direction: row;
     width: 100%;
 }
-/*MEDIA QUERY*/
+
 @media (max-width: 992px) {
-  .login-form {
+  .wrap-login {
     width: 50%;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 
   .login-more {
@@ -229,7 +219,7 @@ a:hover
   
 }
 @media (max-width: 750px) {
-  .login-form {
+  .wrap-login {
     width: 100%;
   }
 
@@ -240,71 +230,10 @@ a:hover
 }
 
 @media (max-width: 576px) {
-  .login-form {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 70px;
-  }
-  
-  .login-more{
-    display: none;
-  }
- 
-}
-/*Social*/
-/* .login100-form-social-item {
-  width: 36px;
-  height: 36px;
-  font-size: 18px;
-  color: #fff;
-  border-radius: 50%;
-}
-
-.login100-form-social-item:hover {
-  background: #333333;
-  color: #fff;
-} */
-
-@-webkit-keyframes fadein {
-  from {
-    top: 0;
-    opacity: 0;
-  }
-  to {
-    top: 30px;
-    opacity: 1;
+  .wrap-login {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
-@keyframes fadein {
-  from {
-    top: 0;
-    opacity: 0;
-  }
-  to {
-    top: 30px;
-    opacity: 1;
-  }
-}
 
-@-webkit-keyframes fadeout {
-  from {
-    top: 30px;
-    opacity: 1;
-  }
-  to {
-    top: 0;
-    opacity: 0;
-  }
-}
-
-@keyframes fadeout {
-  from {
-    top: 30px;
-    opacity: 1;
-  }
-  to {
-    top: 0;
-    opacity: 0;
-  }
-}
